--- a/projects/tatto/src/app/tatto-web/Home/Home.component.html
+++ b/projects/tatto/src/app/tatto-web/Home/Home.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<router-outlet></router-outlet>  <!-- Dynamically load pages here -->
+<app-first-section></app-first-section>
 <app-footer></app-footer>
